// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzplWN kCYiUw"
>
  <div
    className="sc-Axmtr icUvKO"
  >
    <div
      className="sc-AxheI kokSYy"
      onClick={[Function]}
    >
      <span>
         Sub Menu 1 
      </span>
      <i
        className="sc-fzozJi grUWqN"
      />
    </div>
    <ul
      className="sc-AxmLO hAqXzN"
    />
  </div>
  <div
    className="sc-Axmtr icUvKO"
  >
    <div
      className="sc-AxheI kokSYy"
      onClick={[Function]}
    >
      <span>
         Sub Menu 2 
      </span>
      <i
        className="sc-fzozJi grUWqN"
      />
    </div>
    <ul
      className="sc-AxmLO hAqXzN"
    />
  </div>
  <div
    className="sc-fznZeY bCvFKa"
  >
    <span
      className="sc-AxiKw ioUFXk"
      size={4}
    />
  </div>
  <li
    className="sc-fzoLsD ePTHqD"
    onClick={[Function]}
    selected={false}
  >
    Item 3
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzplWN kCYiUw"
>
  <li
    className="sc-fzoLsD sc-fzpans cPjyk"
    onClick={[Function]}
    selected={false}
  >
    <span
      className="sc-AxiKw ioUFXk"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoLsD sc-fzpans cPjyk"
    onClick={[Function]}
    selected={false}
  >
    <span
      className="sc-AxiKw ioUFXk"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoLsD sc-fzpans cPjyk"
    onClick={[Function]}
    selected={false}
  >
    <span
      className="sc-AxiKw ioUFXk"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
